# desafio-mailerweb-ino

./: .env.example  .gitignore  DOCKER.md  Makefile  README.md  README_RESUMO.md  docker-compose.test.yml  docker-compose.yml  plano.md  run_dev.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  celery_app.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  tasks.py
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_rooms_add_fields.py  9e1a972496b8_first_migration.py  eaf8112e78a2_initial_schema.py
backend/app/: config.py  main.py  worker.py
backend/app/api/: dependencies.py
backend/app/db/: db.py  schemas.py
backend/app/domain/: exceptions.py  validators.py
backend/app/models/: OutboxEvent.py  __init__.py  booking.py  form_login.py  outbox.py  room.py  user.py
backend/app/routes/: __init__.py  booking_routes.py  room_routes.py  user_routes.py
backend/app/schemas/: __init__.py  booking.py  outbox.py  room.py  user.py
backend/app/services/: __init__.py  booking_services.py  room_services.py  user_services.py
backend/app/worker/: celery_app.py  main.py  processor.py  tasks.py
backend/docker/: init.sql
backend/libs/: auth.py  command.py  crypt.py  database.py  dto.py  email.py  entity.py  env.py  env_manager.py  model.py  output.py  repo.py  uow.py
backend/tests/: conftest.py  test_auth_protection.py  test_bookings.py  test_health.py  test_worker.py
backend/tests/integration/: test_auth_api.py  test_booking_overlap.py  test_bookings_api.py  test_rooms_api.py
backend/tests/unit/: test_booking_context.py  test_booking_repo.py  test_booking_service.py  test_booking_validators.py  test_domain_rules.py  test_outbox_context.py  test_outbox_service.py  (+5 more)
(+148 files in other folders)
