[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.124.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "email-validator>=2.0.0",
    "ruff>=0.15.5",
    "sqlalchemy>=2.0.48",
    "celery>=5.3.4",
    "redis>=4.5.0",
    "uvicorn>=0.24.0",
    "alembic>=1.14.1",
]
